# Backend

./: .gitignore  build.gradle  docker-compose.yml
ai_module/: requirements.txt
ai_module/common/: __init__.py  utils.py
ai_module/content_generator/: __init__.py  body_generator.py  gpt_utils.py  html_formatter.py  openai_client.py  prompt_builder.py  title_generator.py  workflow.py
ai_module/content_generator/prompts/: content_prompt.txt  (+3 more)
ai_module/keyword_crawler/: __init__.py  __main__.py  cli.py  pipeline.py
ai_module/keyword_selector/: __init__.py  gpt응답 예시  main.py  runner.py  selector.py
ai_module/product_finder/: __init__.py  finder.py  product_history.csv
ai_module/product_selector/: __init__.py  runner.py  selector.py
ai_module/test/: README.md  __init__.py  test_content_generator.py  test_keyword_crawler.py  test_keyword_selector.py  test_product_selector.py
airflow/: Dockerfile  airflow_requirements.txt
airflow/dags/: trend_pipeline.py
blog_upload_module/: .gitignore  README.md  pyproject.toml  requirements.txt
blog_upload_module/src/blog_upload_module/: __init__.py  browser.py  logger.py  naver_uploader.py  results.py  run_posting.py  tistory_uploader.py  webhook.py
blog_upload_module/src/blog_upload_module.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blog_upload_module/src/blog_upload_module/logs/: naver_page_source.html  tistory_page_source.html
blog_upload_module/src/blog_worker/: README.md  __init__.py  config.py  job_executor.py  logger.py  models.py  rabbit_consumer.py  run_worker.py
(+255 files in other folders)
