[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-upload-module"
version = "0.1.0"
description = "Standalone Naver/Tistory blog auto posting utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "OCP" }]
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pyperclip>=1.8.2",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
worker = [
    "pika>=1.3.0",
    "requests>=2.31.0",
]

[project.scripts]
blog-upload-module = "blog_upload_module.run_posting:run_cli"
blog-worker = "blog_worker.run_worker:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
